[tool.poetry]
name = "notas-musicais"
version = "0.1.0"
description = "Notas musicais é um CLI para ajudar na formação de escalas, acordes e campos harmônicos"
authors = ["Edson Carvalho <junior.edson@unifesp.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
taskipy = "^1.14.1"
click = "8.1.7"
ruff = "^0.14.2"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.6.18"
mkdocstrings = "^0.30.0"
mkdocstrings-python = "^1.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ['PLR2004']

[tool.ruff.format]
quote-style = 'single'

[tool.taskipy.tasks]
lint = "ruff check . --unsafe-fixes && ruff check --diff ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=notas_musicais -vv"
post_test = "coverage html"